--- a/RPP/RPP.csproj
+++ b/RPP/RPP.csproj
@@ -63,6 +63,9 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="PresentationCore" />
+    <Reference Include="Spire.Barcode, Version=6.6.0.0, Culture=neutral, PublicKeyToken=663f351905198cb3, processorArchitecture=MSIL">
+      <HintPath>..\packages\FreeSpire.Barcode.6.6.0\lib\net40\Spire.Barcode.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -104,6 +107,10 @@
     <Content Include="Imgs\loader3.gif" />
     <Content Include="Imgs\loadingb.gif" />
     <Content Include="Imgs\logo-gobierno.png" />
+    <Content Include="Imgs\logo2021.png" />
+    <Content Include="Imgs\logo2021e.png" />
+    <Content Include="Imgs\logo2021h.png" />
+    <Content Include="Imgs\logo2024h.png" />
     <Content Include="Imgs\logo_inicio.jpg" />
     <Content Include="Imgs\RPP.jpg" />
     <Content Include="Imgs\RPP_Old.jpg" />
@@ -136,6 +143,7 @@
     <Content Include="Fonts\GothamBook.eot" />
     <Content Include="Fonts\GothamBook.ttf" />
     <Content Include="Fonts\GothamBook.woff" />
+    <None Include="packages.config" />
     <None Include="Properties\PublishProfiles\Deploy Web.pubxml" />
     <None Include="Properties\PublishProfiles\RPP Publicación Por Archivos.pubxml" />
     <None Include="Web.Debug.config">
